[package]
name = "cmd"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rustasc"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
encoding_rs = "0.8.29"
parser = { path = "../parser" }
codegen = { path = "../codegen" }
swf = {git = "https://github.com/ruffle-rs/ruffle"}