[package]
name = "codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parser = { path = "../parser" }
swf = {git = "https://github.com/ruffle-rs/ruffle", rev="5c9471436371f24f1d95011d21b5cddb7fc4ee7f", default-features = false}
indexmap = "1.9.1"
