[package]
name = "parser"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokenizer = { path = "../tokenizer" }
encoding_rs = "0.8.29"
include_dir = "0.7.1"
swf = {git = "https://github.com/ruffle-rs/ruffle"}